--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,26 @@
+.show-color {
+    height: 25vh;
+}
 
+.space-between {
+    justify-content: space-between;
+}
+
+.tipIcon {
+    font-size: 24px;
+}
+
+mat-slider {
+    width: 100%;
+    min-width: 100%;
+}
+
+.r {
+    background-color: red;
+}
+.g {
+    background-color: green;
+}
+.b {
+    background-color: blue;
+}
