--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,246 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-toolbar color="primary">
+    <ion-title slot="start">
+      Arquitectura de computadoras
+    </ion-title>   
+    <ion-buttons slot="end">
+      <ion-button *ngIf="seeTips === true" (click)="toggleTips()"><ion-icon name="eye-off" class="findIcon"></ion-icon></ion-button>
+      <ion-button *ngIf="seeTips !== true" (click)="toggleTips()"><ion-icon name="eye" class="findIcon"></ion-icon></ion-button>      
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+<ion-content color="dark">
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-card>
+          <ion-card-header class="show-color" [style.background]="randomColor" [style.color]="invertedRandomColor" class="ion-text-center">Objetivo</ion-card-header>
+          <ion-row class="ion-no-padding">
+            <ion-col class="ion-no-padding">
+              <ion-button expand="block" (click)="changeRealColor()">Cambiar Color</ion-button>
+            </ion-col>
+            <ion-col class="ion-no-padding">
+              <ion-button expand="block" (click)="toggleSelecting()">{{ selectText }}</ion-button>
+            </ion-col>
+          </ion-row>
+          <ion-grid *ngIf="selecting">
+            <ion-row>
+              <ion-col style="background:#330000" (click)="setColor('#330000')"></ion-col>
+              <ion-col style="background:#331900" (click)="setColor('#331900')">&nbsp;</ion-col>
+              <ion-col style="background:#333300" (click)="setColor('#333300')">&nbsp;</ion-col>
+              <ion-col style="background:#193300" (click)="setColor('#193300')">&nbsp;</ion-col>
+              <ion-col style="background:#003300" (click)="setColor('#003300')">&nbsp;</ion-col>
+              <ion-col style="background:#003319" (click)="setColor('#003319')">&nbsp;</ion-col>
+              <ion-col style="background:#003333" (click)="setColor('#003333')">&nbsp;</ion-col>
+              <ion-col style="background:#001933" (click)="setColor('#001933')">&nbsp;</ion-col>
+              <ion-col style="background:#000033" (click)="setColor('#000033')">&nbsp;</ion-col>
+              <ion-col style="background:#190033" (click)="setColor('#190033')">&nbsp;</ion-col>
+              <ion-col style="background:#330033" (click)="setColor('#330033')">&nbsp;</ion-col>
+              <ion-col style="background:#330019" (click)="setColor('#330019')">&nbsp;</ion-col>
+              <ion-col style="background:#000000" (click)="setColor('#000000')">&nbsp;</ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col style="background:#660000" (click)="setColor('#660000')">&nbsp;</ion-col>
+              <ion-col style="background:#663300" (click)="setColor('#663300')">&nbsp;</ion-col>
+              <ion-col style="background:#666600" (click)="setColor('#666600')">&nbsp;</ion-col>
+              <ion-col style="background:#336600" (click)="setColor('#336600')">&nbsp;</ion-col>
+              <ion-col style="background:#006600" (click)="setColor('#006600')">&nbsp;</ion-col>
+              <ion-col style="background:#006633" (click)="setColor('#006633')">&nbsp;</ion-col>
+              <ion-col style="background:#006666" (click)="setColor('#006666')">&nbsp;</ion-col>
+              <ion-col style="background:#003366" (click)="setColor('#003366')">&nbsp;</ion-col>
+              <ion-col style="background:#000066" (click)="setColor('#000066')">&nbsp;</ion-col>
+              <ion-col style="background:#330066" (click)="setColor('#330066')">&nbsp;</ion-col>
+              <ion-col style="background:#660066" (click)="setColor('#660066')">&nbsp;</ion-col>
+              <ion-col style="background:#660033" (click)="setColor('#660033')">&nbsp;</ion-col>
+              <ion-col style="background:#202020" (click)="setColor('#202020')">&nbsp;</ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col style="background:#990000" (click)="setColor('#990000')">&nbsp;</ion-col>
+              <ion-col style="background:#994C00" (click)="setColor('#994C00')">&nbsp;</ion-col>
+              <ion-col style="background:#999900" (click)="setColor('#999900')">&nbsp;</ion-col>
+              <ion-col style="background:#4C9900" (click)="setColor('#4C9900')">&nbsp;</ion-col>
+              <ion-col style="background:#009900" (click)="setColor('#009900')">&nbsp;</ion-col>
+              <ion-col style="background:#00994C" (click)="setColor('#00994C')">&nbsp;</ion-col>
+              <ion-col style="background:#009999" (click)="setColor('#009999')">&nbsp;</ion-col>
+              <ion-col style="background:#004C99" (click)="setColor('#004C99')">&nbsp;</ion-col>
+              <ion-col style="background:#000099" (click)="setColor('#000099')">&nbsp;</ion-col>
+              <ion-col style="background:#4C0099" (click)="setColor('#4C0099')">&nbsp;</ion-col>
+              <ion-col style="background:#990099" (click)="setColor('#990099')">&nbsp;</ion-col>
+              <ion-col style="background:#99004C" (click)="setColor('#99004C')">&nbsp;</ion-col>
+              <ion-col style="background:#404040" (click)="setColor('#404040')">&nbsp;</ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col style="background:#CC0000" (click)="setColor('#CC0000')">&nbsp;</ion-col>
+              <ion-col style="background:#CC6600" (click)="setColor('#CC6600')">&nbsp;</ion-col>
+              <ion-col style="background:#CCCC00" (click)="setColor('#CCCC00')">&nbsp;</ion-col>
+              <ion-col style="background:#66CC00" (click)="setColor('#66CC00')">&nbsp;</ion-col>
+              <ion-col style="background:#00CC00" (click)="setColor('#00CC00')">&nbsp;</ion-col>
+              <ion-col style="background:#00CC66" (click)="setColor('#00CC66')">&nbsp;</ion-col>
+              <ion-col style="background:#00CCCC" (click)="setColor('#00CCCC')">&nbsp;</ion-col>
+              <ion-col style="background:#0066CC" (click)="setColor('#0066CC')">&nbsp;</ion-col>
+              <ion-col style="background:#0000CC" (click)="setColor('#0000CC')">&nbsp;</ion-col>
+              <ion-col style="background:#6600CC" (click)="setColor('#6600CC')">&nbsp;</ion-col>
+              <ion-col style="background:#CC00CC" (click)="setColor('#CC00CC')">&nbsp;</ion-col>
+              <ion-col style="background:#CC0066" (click)="setColor('#CC0066')">&nbsp;</ion-col>
+              <ion-col style="background:#606060" (click)="setColor('#606060')">&nbsp;</ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col style="background:#FF0000" (click)="setColor('#FF0000')">&nbsp;</ion-col>
+              <ion-col style="background:#FF8000" (click)="setColor('#FF8000')">&nbsp;</ion-col>
+              <ion-col style="background:#FFFF00" (click)="setColor('#FFFF00')">&nbsp;</ion-col>
+              <ion-col style="background:#80FF00" (click)="setColor('#80FF00')">&nbsp;</ion-col>
+              <ion-col style="background:#00FF00" (click)="setColor('#00FF00')">&nbsp;</ion-col>
+              <ion-col style="background:#00FF80" (click)="setColor('#00FF80')">&nbsp;</ion-col>
+              <ion-col style="background:#00FFFF" (click)="setColor('#00FFFF')">&nbsp;</ion-col>
+              <ion-col style="background:#0080FF" (click)="setColor('#0080FF')">&nbsp;</ion-col>
+              <ion-col style="background:#0000FF" (click)="setColor('#0000FF')">&nbsp;</ion-col>
+              <ion-col style="background:#7F00FF" (click)="setColor('#7F00FF')">&nbsp;</ion-col>
+              <ion-col style="background:#FF00FF" (click)="setColor('#FF00FF')">&nbsp;</ion-col>
+              <ion-col style="background:#FF007F" (click)="setColor('#FF007F')">&nbsp;</ion-col>
+              <ion-col style="background:#808080" (click)="setColor('#808080')">&nbsp;</ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col style="background:#FF3333" (click)="setColor('#FF3333')">&nbsp;</ion-col>
+              <ion-col style="background:#FF9933" (click)="setColor('#FF9933')">&nbsp;</ion-col>
+              <ion-col style="background:#FFFF33" (click)="setColor('#FFFF33')">&nbsp;</ion-col>
+              <ion-col style="background:#99FF33" (click)="setColor('#99FF33')">&nbsp;</ion-col>
+              <ion-col style="background:#33FF33" (click)="setColor('#33FF33')">&nbsp;</ion-col>
+              <ion-col style="background:#33FF99" (click)="setColor('#33FF99')">&nbsp;</ion-col>
+              <ion-col style="background:#33FFFF" (click)="setColor('#33FFFF')">&nbsp;</ion-col>
+              <ion-col style="background:#3399FF" (click)="setColor('#3399FF')">&nbsp;</ion-col>
+              <ion-col style="background:#3333FF" (click)="setColor('#3333FF')">&nbsp;</ion-col>
+              <ion-col style="background:#9933FF" (click)="setColor('#9933FF')">&nbsp;</ion-col>
+              <ion-col style="background:#FF33FF" (click)="setColor('#FF33FF')">&nbsp;</ion-col>
+              <ion-col style="background:#FF3399" (click)="setColor('#FF3399')">&nbsp;</ion-col>
+              <ion-col style="background:#A0A0A0" (click)="setColor('#A0A0A0')">&nbsp;</ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col style="background:#FF6666" (click)="setColor('#FF6666')">&nbsp;</ion-col>
+              <ion-col style="background:#FFB266" (click)="setColor('#FFB266')">&nbsp;</ion-col>
+              <ion-col style="background:#FFFF66" (click)="setColor('#FFFF66')">&nbsp;</ion-col>
+              <ion-col style="background:#B2FF66" (click)="setColor('#B2FF66')">&nbsp;</ion-col>
+              <ion-col style="background:#66FF66" (click)="setColor('#66FF66')">&nbsp;</ion-col>
+              <ion-col style="background:#66FFB2" (click)="setColor('#66FFB2')">&nbsp;</ion-col>
+              <ion-col style="background:#66FFFF" (click)="setColor('#66FFFF')">&nbsp;</ion-col>
+              <ion-col style="background:#66B2FF" (click)="setColor('#66B2FF')">&nbsp;</ion-col>
+              <ion-col style="background:#6666FF" (click)="setColor('#6666FF')">&nbsp;</ion-col>
+              <ion-col style="background:#B266FF" (click)="setColor('#B266FF')">&nbsp;</ion-col>
+              <ion-col style="background:#FF66FF" (click)="setColor('#FF66FF')">&nbsp;</ion-col>
+              <ion-col style="background:#FF66B2" (click)="setColor('#FF66B2')">&nbsp;</ion-col>
+              <ion-col style="background:#C0C0C0" (click)="setColor('#C0C0C0')">&nbsp;</ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col style="background:#FF9999" (click)="setColor('#FF9999')">&nbsp;</ion-col>
+              <ion-col style="background:#FFCC99" (click)="setColor('#FFCC99')">&nbsp;</ion-col>
+              <ion-col style="background:#FFFF99" (click)="setColor('#FFFF99')">&nbsp;</ion-col>
+              <ion-col style="background:#CCFF99" (click)="setColor('#CCFF99')">&nbsp;</ion-col>
+              <ion-col style="background:#99FF99" (click)="setColor('#99FF99')">&nbsp;</ion-col>
+              <ion-col style="background:#99FFCC" (click)="setColor('#99FFCC')">&nbsp;</ion-col>
+              <ion-col style="background:#99FFFF" (click)="setColor('#99FFFF')">&nbsp;</ion-col>
+              <ion-col style="background:#99CCFF" (click)="setColor('#99CCFF')">&nbsp;</ion-col>
+              <ion-col style="background:#9999FF" (click)="setColor('#9999FF')">&nbsp;</ion-col>
+              <ion-col style="background:#CC99FF" (click)="setColor('#CC99FF')">&nbsp;</ion-col>
+              <ion-col style="background:#FF99FF" (click)="setColor('#FF99FF')">&nbsp;</ion-col>
+              <ion-col style="background:#FF99CC" (click)="setColor('#FF99CC')">&nbsp;</ion-col>
+              <ion-col style="background:#E0E0E0" (click)="setColor('#E0E0E0')">&nbsp;</ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col style="background:#FFCCCC" (click)="setColor('#FFCCCC')">&nbsp;</ion-col>
+              <ion-col style="background:#FFE5CC" (click)="setColor('#FFE5CC')">&nbsp;</ion-col>
+              <ion-col style="background:#FFFFCC" (click)="setColor('#FFFFCC')">&nbsp;</ion-col>
+              <ion-col style="background:#E5FFCC" (click)="setColor('#E5FFCC')">&nbsp;</ion-col>
+              <ion-col style="background:#CCFFCC" (click)="setColor('#CCFFCC')">&nbsp;</ion-col>
+              <ion-col style="background:#CCFFE5" (click)="setColor('#CCFFE5')">&nbsp;</ion-col>
+              <ion-col style="background:#CCFFFF" (click)="setColor('#CCFFFF')">&nbsp;</ion-col>
+              <ion-col style="background:#CCE5FF" (click)="setColor('#CCE5FF')">&nbsp;</ion-col>
+              <ion-col style="background:#CCCCFF" (click)="setColor('#CCCCFF')">&nbsp;</ion-col>
+              <ion-col style="background:#E5CCFF" (click)="setColor('#E5CCFF')">&nbsp;</ion-col>
+              <ion-col style="background:#FFCCFF" (click)="setColor('#FFCCFF')">&nbsp;</ion-col>
+              <ion-col style="background:#FFCCE5" (click)="setColor('#FFCCE5')">&nbsp;</ion-col>
+              <ion-col style="background:#FFFFFF" (click)="setColor('#FFFFFF')">&nbsp;</ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-card>
+          <ion-card-header class="show-color" [style.background]="rgb" [style.color]="invertedAproxColor" class="ion-text-center">Actual</ion-card-header>
+          <ion-card-content>
+            <ion-row style="margin-top: 5px;" class="space-between">
+              <ion-card-title color="primary">Red</ion-card-title>
+              <ion-icon class="tipIcon" color="primary" *ngIf="tipR === 'sad' && seeTips === true" name="sad"></ion-icon>
+              <ion-icon class="tipIcon" color="primary" *ngIf="tipR !== 'sad' && seeTips === true" name="happy"></ion-icon>
+            </ion-row>
+            <mat-slider (input)="rc($event)" color="primary" min="0" max="255" step="1" value="255"></mat-slider>
+            <ion-row class="space-between">
+              <ion-card-title color="primary">Green</ion-card-title>
+              <ion-icon class="tipIcon" color="primary" *ngIf="tipG === 'sad' && seeTips === true" name="sad"></ion-icon>
+              <ion-icon class="tipIcon" color="primary" *ngIf="tipG !== 'sad' && seeTips === true" name="happy"></ion-icon>
+            </ion-row>            
+            <mat-slider (input)="gc($event)" color="primary" min="0" max="255" step="1" value="255"></mat-slider>
+            
+            <ion-row class="space-between">
+              <ion-card-title color="primary">Blue</ion-card-title>
+              <ion-icon class="tipIcon" color="primary" *ngIf="tipB === 'sad' && seeTips === true" name="sad"></ion-icon>
+              <ion-icon class="tipIcon" color="primary" *ngIf="tipB !== 'sad' && seeTips === true" name="happy"></ion-icon>
+            </ion-row>  
+            <mat-slider (input)="bc($event)" color="primary" min="0" max="255" step="1" value="255"></mat-slider>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="showErrors === true">
+      <ion-col>
+          <ion-card>
+            <ion-card-header color="primary" class="ion-text-center">Error absoluto</ion-card-header>
+            <ion-card-content>
+              <ion-row class="space-between">
+                <ion-card-title color="primary">Color</ion-card-title>
+                <ion-card-subtitle color="primary">Unidades</ion-card-subtitle>
+              </ion-row>
+              <ion-row class="space-between">
+                <ion-card-title color="light">Red</ion-card-title>
+                <ion-card-subtitle>{{ rError }}</ion-card-subtitle>
+              </ion-row>
+              <ion-row class="space-between">
+                <ion-card-title color="light">Green</ion-card-title>
+                <ion-card-subtitle>{{ gError }}</ion-card-subtitle>
+              </ion-row>
+              <ion-row class="space-between">
+                <ion-card-title color="light">Blue</ion-card-title>
+                <ion-card-subtitle>{{ bError }}</ion-card-subtitle>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
+      </ion-col>
+      <ion-col>        
+        <ion-card>
+          <ion-card-header color="primary" class="ion-text-center">Error Relativo</ion-card-header>
+          <ion-card-content>
+            <ion-row class="space-between">
+              <ion-card-title color="primary">Color</ion-card-title>
+              <ion-card-subtitle color="primary">% Error</ion-card-subtitle>
+            </ion-row>
+            <ion-row class="space-between">
+              <ion-card-title color="light">Red</ion-card-title>
+              <ion-card-subtitle>{{ rRelative }}</ion-card-subtitle>
+            </ion-row>
+            <ion-row class="space-between">
+              <ion-card-title color="light">Green</ion-card-title>
+              <ion-card-subtitle >{{ gRelative }}</ion-card-subtitle>
+            </ion-row>
+            <ion-row class="space-between">
+              <ion-card-title color="light">Blue</ion-card-title>
+              <ion-card-subtitle >{{ bRelative }}</ion-card-subtitle>
+            </ion-row>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+
+<ion-footer class="ion-no-padding" color="dark">
+  <ion-button class="ion-no-margin" color="primary" expand="full" (click)="toggleErrors()">{{ showErrorsText }}</ion-button>
+</ion-footer>
